objects/Activity.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Relational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities (Customer)</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Team__c</fullName>
        <formula>IF( Owner:User.UserRole.Name = &quot;NorthAmerica&quot;, &quot;NorthAmerica&quot;,
IF( Owner:User.UserRole.Name = &quot;Europe&quot;, &quot;Europe&quot;,
IF( Owner:User.UserRole.Name = &quot;Japan&quot;, &quot;Japan&quot;,
&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketFlag__c</fullName>
        <formula>CASE(Market__c,
&quot;FR&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfkBAAS&quot;,&quot;France&quot;),
&quot;IT&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfkAAAS&quot;,&quot;Italia&quot;),
&quot;ES&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MflNAAS&quot;,&quot;Spain&quot;),
&quot;RU&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MflMAAS&quot;,&quot;Russia&quot;),
&quot;PT&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfl0AAC&quot;,&quot;Portugal&quot;),
&quot;GB&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfkHAAS&quot;,&quot;United Kingdom&quot;),
&quot;NL&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfjyAAC&quot;,&quot;Netherlands&quot;),
&quot;BE&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfk9AAC&quot;,&quot;Belgium&quot;),
&quot;GR&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfjuAAC&quot;,&quot;Greece&quot;),
&quot;PL&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MflAAAS&quot;,&quot;Poland&quot;),
&quot;SE&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfl8AAC&quot;,&quot;Sweden&quot;),
&quot;CH&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfl9AAC&quot;,&quot;Switzerland&quot;),
&quot;RO&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfl7AAC&quot;,&quot;Romania&quot;),
&quot;IE&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfk2AAC&quot;,&quot;Ireland&quot;),
&quot;DK&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfkzAAC&quot;,&quot;Denmark&quot;),
&quot;AT&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000yRSN&quot;,&quot;Austria&quot;),
&quot;DE&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000yRT1&quot;,&quot;Germany&quot;),
&quot;FI&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000yRTV&quot;,&quot;Finland&quot;),
&quot;LU&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfkE&quot;,&quot;Luxembourg&quot;),
&quot;CA&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfkw&quot;,&quot;Canada&quot;),
&quot;US&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfko&quot;,&quot;USA&quot;),
&quot;BR&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfks&quot;,&quot;Brazil&quot;),
&quot;AE&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfkQ&quot;,&quot;United Arab Emirates&quot;),
&quot;CN&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfkj&quot;,&quot;China&quot;),
&quot;HK&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfkl&quot;,&quot;Hong Kong&quot;),
&quot;KR&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfkh&quot;,&quot;South Korea&quot;),
&quot;JP&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000yRUw&quot;,&quot;Japan&quot;),
&quot;SG&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfkm&quot;,&quot;Singapore&quot;),
&quot;TW&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Dg1R&quot;,&quot;Taiwan&quot;),
&quot;ID&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000yRTW&quot;,&quot;Indonesia&quot;),
&quot;MY&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfkR&quot;,&quot;Malaysia&quot;),
&quot;NO&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000yRVR&quot;,&quot;Norway&quot;),
&quot;AU&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfkk&quot;,&quot;Australia&quot;),
&quot;INT&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000yRU9&quot;,&quot;International&quot;),
IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfnSAAS&quot;,&quot;Inconnu&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarketFlag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataRecovery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DataRecovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Type__c</fullName>
        <label>Outreach Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>WhatsApp</fullName>
                </value>
                <value>
                    <fullName>WeChat</fullName>
                </value>
                <value>
                    <fullName>Line</fullName>
                </value>
                <value>
                    <fullName>Line ChatRoom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_id_report__c</fullName>
        <description>In order to have 18 digits acitvity ID in Salesforce reports.</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Task ID report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Source__c</fullName>
        <label>Outreach Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Contact 360</fullName>
                </value>
                <value>
                    <fullName>Contact List</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>Worldwide Search</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outreach Campaign</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Field_BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BC</label>
        <referenceTo>BC__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Case_type_2__c</fullName>
        <label>Related Case type 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advice</fullName>
                </value>
                <value>
                    <fullName>Anomalies in store (sales error / other feedback...)</fullName>
                </value>
                <value>
                    <fullName>Availability In Store</fullName>
                </value>
                <value>
                    <fullName>Booking / consultations</fullName>
                </value>
                <value>
                    <fullName>Brand information</fullName>
                </value>
                <value>
                    <fullName>Brand policy</fullName>
                </value>
                <value>
                    <fullName>Bulk Non compliant</fullName>
                </value>
                <value>
                    <fullName>Call &amp; Delivery</fullName>
                </value>
                <value>
                    <fullName>Click &amp; Collect (in store)</fullName>
                </value>
                <value>
                    <fullName>Clienteling</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Cosmetovigilance</fullName>
                </value>
                <value>
                    <fullName>CRM Communications</fullName>
                </value>
                <value>
                    <fullName>Delivery Information</fullName>
                </value>
                <value>
                    <fullName>Dior Couture inquiries</fullName>
                </value>
                <value>
                    <fullName>Engraving service (in store)</fullName>
                </value>
                <value>
                    <fullName>Engraving service (online)</fullName>
                </value>
                <value>
                    <fullName>E-services &amp; catalog</fullName>
                </value>
                <value>
                    <fullName>Gifting policy at multibrands stores</fullName>
                </value>
                <value>
                    <fullName>Instant Advisory</fullName>
                </value>
                <value>
                    <fullName>Internal support: Warehouse / operations / Carrier</fullName>
                </value>
                <value>
                    <fullName>Loyalty program</fullName>
                </value>
                <value>
                    <fullName>My Dior Beauty Account Bugs reports</fullName>
                </value>
                <value>
                    <fullName>Order Delivery &amp; Content</fullName>
                </value>
                <value>
                    <fullName>Ordering experience</fullName>
                </value>
                <value>
                    <fullName>Order on Behalf (Placing an order for the client)</fullName>
                </value>
                <value>
                    <fullName>Other client e-services expectations</fullName>
                </value>
                <value>
                    <fullName>Other client store services expectations</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Others - Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_sale_number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related sale number</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outreach_Clienteling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outreach Clienteling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Clienteling_CS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outreach Clienteling CS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Activity_Date__c</fullName>
        <formula>Client__r.Last_Activity_Date__c</formula>
        <label>Contact Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logistics_team_action_done_order_reship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logistics team action done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_team_action_done_order_reshipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order team action done</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>